--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@next/font": "^13.1.6",
     "framer-motion": "^9.0.3",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "react-share": "^4.4.1"
   },
   "devDependencies": {
     "eslint": "8.34.0",
