--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.10.5",
     "@next/font": "^13.1.6",
     "@vercel/analytics": "^0.1.10",
+    "@vercel/og": "^0.1.0",
     "framer-motion": "^9.0.3",
     "next": "13.1.6",
     "react": "18.2.0",
